Adding RestAssured supoort for this framework

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,24 @@
 			<artifactId>selenium-java</artifactId>
 			<version>4.16.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+<dependency>
+    <groupId>io.rest-assured</groupId>
+    <artifactId>rest-assured</artifactId>
+    <version>5.4.0</version>
+   <!--  <scope>test</scope> -->
+</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.28</version>
+    <scope>provided</scope>
+</dependency>
+
+		
 	</dependencies>
 
 	<build>
